2020-11-25 [1.42 Bld 181]

- Addition    : Support :8 and :16 instruction formats for branches on H8/500
- Bugfix      : Some fixes to H'xxxx hex syntax on H8/500 and H8/300
- Bugfix      : correct TLCS-90 MUL/DIV with immediate addressing

2020-11-18 [1.42 Bld 180]

- Addition    : Support Toshiba TLCS-870/C as target
- Bugfix      : do not search relative to current file's path if (B)INCLUDEd
                file's path is absolute

2020-11-08 [1.42 Bld 179]

- Bugfix      : MCS-48: correctly regard forward references when checking
                memory bank of CALL/JMP target

2020-11-04 [1.42 Bld 178]

- Addition    : Add DW and DB as aliases for BYT/ADR for 68xx targets
- Addition    : Add MB assume value for MCS-48
- Bugfix      : fix -r option on p2bin and p2hex

2020-10-25 [1.42 Bld 177]

- Addition    : Add some 68xx instruction aliases used on other assemblers
- Addition    : new target: KENBAK

2020-10-19 [1.42 Bld 176]

- Addition    : bit symbols for H8/300 and H8/500
- Addition    : support half size (16 bit) floating point type

2020-10-02 [1.42 Bld 175]

- Addition    : register symbols for TLCS-9000
- Addition    : -relaxed command line switch to enable RELAXED mode
                by default
- Addition    : For H8/500, allow H'... syntax for hex constants in
                relaxed mode
- Addition    : For H8/500, bit operations by default assume word size
                if destination is a register
- Addition    : For H8/500, allow :8 and :16 size specifiers on immediate
                source operand for MOV and CMP
- Addition    : For H8/500, allow DATA as an alias for DC

2020-09-19 [1.42 Bld 174]

- Change      : rework register symbol handling
- Addition    : register symbols for 68K, M16, M16C, H8/300, H8/500,
                SH7x00, XGATE, H16, i960, XA, and 29K

2020-08-25 [1.42 Bld 173]

- Change      : avoid error/warning number of zero
- Addition    : allow operand size attributes for SET and EQU

2020-06-22 [1.42 Bld 172]
